...
            </objects>
            <point key="canvasLocation" x="-516" y="70"/>
        </scene>
        <!--On Board View Controller-->
        <scene sceneID="s3a-YL-8Gv">
            <objects>
                <viewController id="y23-B6-Fq6" customClass="OnBoardViewController" customModule="PlateMate" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Zar-7x-8ls">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4po-R7-41L">
                                <rect key="frame" x="0.0" y="92" width="414" height="638"/>
...
                                <color key="backgroundColor" red="1" green="0.73725490199999999" blue="0.24313725489999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="4Pg-9c-q3f"/>
                                    <constraint firstAttribute="width" constant="150" id="rRf-GQ-C0j"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Next">
                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="nextBtnClicked:" destination="y23-B6-Fq6" eventType="touchUpInside" id="fBo-Ol-Q6o"/>
                                </connections>
                            </button>
...
                                        <rect key="frame" x="0.0" y="50" width="414" height="501"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ttw-xF-sMO" id="UBn-Ry-1dw">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="501"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Toast" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uPX-go-xGf">
                                                    <rect key="frame" x="20" y="457" width="352" height="58"/>
                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="58" id="8bD-Gn-6r4"/>
                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="352" id="RNB-49-3WZ"/>
...
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="tal-s4-qrn">
                                <rect key="frame" x="15" y="441" width="384" height="410"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jlm-3X-eQS">
                                        <rect key="frame" x="0.0" y="0.0" width="384" height="64"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Recipe Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fEg-ym-gaq">
                                                <rect key="frame" x="8" y="10" width="80" height="16"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                <color key="textColor" name="DarkGray"/>
                                                <nil key="highlightedColor"/>
                                            </label>
...
