...
    var slides: [OnboardingSlide] = []
    
    var currentPage = 0 {
            didSet {
                pageControl.currentPage = currentPage
                if currentPage == slides.count - 1 {
                    nextBtn.setTitle("Get Started", for: .normal)
                } else {
                    nextBtn.setTitle("Next", for: .normal)
                }
            }
        }
    
...
