...
            
            if let image = editingFood?.image {
                photoThumbnail.setBackgroundImage(UIImage(data: image), for: .normal)
                userHasSelectedImage = true
            }
            
            saveButton.setTitle("Update Recipe", for: .normal)
            navigationItem.title = "Edit \(editingFood!.name ?? "")"
        }
        
        validateFields()
    }
    
...
